# mod_wsgi

./: .gitignore  .hgignore  .mailmap  CREDITS.rst  Justfile  MANIFEST.in  Makefile-1.X.in  Makefile-2.X.in  Makefile.in  README  README-express.rst  README-standalone.rst  README.rst  configure  configure.ac  mod_wsgi.c  package.sh  posix-ap1X.mk.in  posix-ap2X.mk.in  pyproject.toml.in  setup.py  tox.ini  win32-ap22py26.mk  win32-ap22py27.mk  win32-ap22py30.mk  win32-ap22py31.mk
.github/workflows/: main.yml  mod_wsgi-telemetry.yml  mod_wsgi.yml
docs/: Makefile  conf.py  configuration.rst  contributing.rst  error-reference.rst  finding-help.rst  getting-help.rst  getting-started.rst  how-mod-wsgi-works.rst  index.rst  installation.rst  known-issues.rst  make.bat  project-status.rst  release-notes.rst  reporting-bugs.rst  requirements.rst  security-issues.rst  source-code.rst  troubleshooting.rst  user-guides.rst
docs/config-directives/: WSGIAcceptMutex.rst  WSGIApplicationGroup.rst  WSGIScriptAlias.rst  WSGIScriptAliasMatch.rst
docs/configuration-directives/: WSGIAcceptMutex.rst  WSGIAccessScript.rst  WSGIApplicationGroup.rst  WSGIAuthGroupScript.rst  WSGIAuthUserScript.rst  WSGICallableObject.rst  WSGICaseSensitivity.rst  WSGIChunkedRequest.rst  WSGIDaemonProcess.rst  WSGIDestroyInterpreter.rst  WSGIDispatchScript.rst  WSGIDontWriteBytecode.rst  WSGIEnableSendfile.rst  WSGIErrorOverride.rst  WSGIFreeThreading.rst  WSGIHandlerScript.rst  WSGIIgnoreActivity.rst  WSGIImportScript.rst  WSGIInterpreterOptions.rst  WSGILazyInitialization.rst  WSGIMapHEADToGET.rst  WSGIPassApacheRequest.rst  WSGIPassAuthorization.rst  WSGIPerInterpreterGIL.rst  WSGIProcessGroup.rst  WSGIPythonEggs.rst  WSGIPythonHashSeed.rst  WSGIPythonHome.rst  WSGIPythonOptimize.rst  WSGIPythonPath.rst  WSGIPythonWarnings.rst  WSGIRestrictEmbedded.rst  WSGIRestrictProcess.rst  WSGIRestrictSignal.rst  WSGIRestrictStdin.rst  WSGIRestrictStdout.rst  WSGIScriptAlias.rst  WSGIScriptAliasMatch.rst  WSGIScriptReloading.rst  WSGIServerMetrics.rst  (+8 more)
docs/release-notes/: index.rst  version-1.0.rst  version-1.1.rst  version-1.2.rst  version-1.3.rst  version-1.4.rst  version-1.5.rst  version-1.6.rst  version-2.0.rst  version-2.1.rst  version-2.2.rst  version-2.3.rst  version-2.4.rst  version-2.5.rst  version-2.6.rst  version-2.7.rst  version-2.8.rst  version-3.0.rst  version-3.1.rst  version-3.2.rst  version-3.3.rst  version-3.4.rst  version-3.5.rst  version-4.0.rst  version-4.1.0.rst  version-4.1.1.rst  version-4.1.2.rst  version-4.1.3.rst  version-4.2.0.rst  version-4.2.1.rst  version-4.2.2.rst  version-4.2.3.rst  version-4.2.4.rst  version-4.2.5.rst  version-4.2.6.rst  version-4.2.7.rst  version-4.2.8.rst  version-4.2.9.rst  version-4.3.0.rst  version-4.3.1.rst  (+80 more)
docs/user-guides/: access-control-mechanisms.rst  application-issues.rst  assorted-tips-and-tricks.rst  checking-your-installation.rst  configuration-guidelines.rst  configuration-issues.rst  daemon-mode.rst  debugging-techniques.rst  delegating-file-serving.rst  detecting-mod-wsgi.rst  embedded-and-daemon-mode.rst  enabling-https.rst  external-telemetry-service.rst  file-wrapper-extension.rst  frequently-asked-questions.rst  gil-modes-and-free-threading.rst  hosting-websocket-applications.rst  installation-from-pypi.rst  installation-issues.rst  installation-on-linux.rst  installation-on-macosx.rst  installation-on-windows.rst  installing-with-docker.rst  internal-metrics-api.rst  issues-with-expat-library.rst  issues-with-pickle-module.rst  logging-from-applications.rst  mod-wsgi-express-quickstart.rst  mod-wsgi-python-module.rst  processes-and-threading.rst  quick-configuration-guide.rst  quick-installation-guide.rst  registering-cleanup-code.rst  reloading-source-code.rst  request-pipeline.rst  running-behind-a-reverse-proxy.rst  security-hardening.rst  subscribing-to-events.rst  upgrading-an-application.rst  virtual-environments.rst
scripts/: benchmark_metrics.py  run-benchmark.sh  run-single-test.sh  run-tests.sh  test-python-versions.sh
src/diagnostics/: environ.py
src/express/: __init__.py  apache.py  cli.py  options.py  platform.py  reloader.py  runtime.py  scripts.py  server.py
src/server/: __init__.py  environ.py  mod_wsgi.c  wsgi_adapter.c  wsgi_adapter.h  wsgi_apache.c  wsgi_apache.h  wsgi_auth.c  wsgi_auth.h  wsgi_buckets.c  wsgi_buckets.h  wsgi_config.c  wsgi_config.h  wsgi_convert.c  wsgi_convert.h  wsgi_daemon.c  wsgi_daemon.h  wsgi_dispatch.c  wsgi_dispatch.h  wsgi_environ.c  wsgi_environ.h  wsgi_execute.c  wsgi_execute.h  wsgi_gc.c  wsgi_gc.h  wsgi_input.c  wsgi_input.h  wsgi_interp.c  wsgi_interp.h  wsgi_logger.c  wsgi_logger.h  wsgi_memory.c  wsgi_memory.h  wsgi_metrics.c  wsgi_metrics.h  wsgi_module.c  wsgi_module.h  wsgi_python.h  (+19 more)
telemetry/: README-telemetry.rst  README.md  pyproject.toml
telemetry/src/mod_wsgi/telemetry/: __init__.py  cli.py  contention.py  ingest.py  server.py  simulate.py  wire.py
telemetry/src/mod_wsgi/telemetry/static/: index.html
telemetry/src/mod_wsgi_telemetry/: __init__.py  cli.py  contention.py  dump.py  ingest.py  server.py  simulate.py  tui.py  wire.py
telemetry/src/mod_wsgi_telemetry/static/: index.html
telemetry/tests/: test_wire.py
tests/: access.wsgi  auth.wsgi  benchmark.wsgi  dispatch.py  environ.wsgi  events.wsgi  hello.wsgi  logging.wsgi  metrics.wsgi  print.wsgi  server-metrics.wsgi  server_metrics_sidecar.py  sidecar.py  warnings.wsgi
win32/: README.rst  ap22py26-win32-VC9.mk  ap22py26.mk  ap22py27-win32-VC9.mk  ap22py27.mk  ap22py31.mk  ap22py32-win32-VC9.mk  ap22py32.mk  ap22py33.mk  ap22py34.mk  ap24py26-win32-VC9.mk  ap24py26-win64-VC9.mk  ap24py26.mk  ap24py27-win32-VC9.mk  ap24py27-win64-VC9.mk  ap24py27.mk  ap24py32-win32-VC9.mk  ap24py32-win64-VC9.mk  ap24py32.mk  ap24py33-win32-VC10.mk  ap24py33-win64-VC10.mk  ap24py33.mk  ap24py34-win32-VC10.mk  ap24py34-win64-VC10.mk  ap24py34.mk  ap24py36-win64-VC14.mk  build-all.sh  build-win32-VC10.bat  build-win32-VC9.bat  build-win64-VC10.bat  build-win64-VC9.bat  common-VC10.mk  common-VC14.mk  common-VC9.mk  common.mk
(+55 files in other folders)
