[project]
name = "mod-wsgi-telemetry"
version = "0.1.0"
description = "Ingestion service and live UI for mod_wsgi telemetry samples."
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
]

[project.scripts]
mod-wsgi-telemetry = "mod_wsgi_telemetry.server:main"
mod-wsgi-telemetry-dump = "mod_wsgi_telemetry.dump:main"
mod-wsgi-telemetry-simulate = "mod_wsgi_telemetry.simulate:main"
mod-wsgi-telemetry-top = "mod_wsgi_telemetry.tui:main"

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mod_wsgi_telemetry"]
