[project]
name = "mod_wsgi-telemetry"
version = "0.1.0"
description = "Ingestion service and live UI for mod_wsgi telemetry samples."
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
]

[project.scripts]
mod_wsgi-telemetry = "mod_wsgi_telemetry.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mod_wsgi_telemetry"]
